test/end-to-end/compile-errors/enum-value-overflow.crow
main void()
	()

e enum
	a = -1
	b = 0
	c = 4294967295
	d = 4294967296

e enum int8 storage
	a = -129
	b = -128
	c = 127
	d = 128

f flags nat16 storage
	a = 65535
	b = 65536
